# epmc_v2_hardware_interface

./: CMakeLists.txt  README.md  epmc_v2_hardware_interface.xml  package.xml
example_control_file/: 2_wheel_epmc_v2_ros2_control.xacro  2_wheel_robot_base_controller.yaml  4_wheel_epmc_v2_ros2_control.xacro  4_wheel_robot_base_controller.yaml  ekf.yaml  robot.launch.py
example_control_file/2_wheel/: robot_base_controller.yaml
example_control_file/4_wheel/: robot_base_controller.yaml  ros2_control.xacro
include/epmc_v2_hardware_interface/: epmc_v2.hpp  epmc_v2_hardware_interface.hpp  imu.hpp  motor.hpp
src/: epmc_v2_hardware_interface.cpp
